class2/EC2/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "test" {
  ami           = data.aws_ami.ubuntu.id # Amazon Linux 2 (us-east-1)
  instance_type = "t2.micro"
  associate_public_ip_address = true
  availability_zone = "us-east-1a" 
  key_name = aws_key_pair.deployer.key_name
  subnet_id              = "subnet-033c8143413f5791c"   # твой subnet
  vpc_security_group_ids = ["sg-0521c88ac581c1718"]     # твой security group

  tags = {
    Name = "Test-EC2-NVirginia"
  }
}
